# quick-init

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: main.rs
