[package]
name = "quick-init"
author = "Oscar Pickerill <me@oscars.dev>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
toml = "0.5.9"
